# statement-dot

./: .gitignore  Cargo.toml  README.md  cdm.json  index.html  package-lock.json  package.json  polkadot-app-deploy.config.ts  shot.mjs  vite.config.ts
contract/: README.md  StatementRegistry.sol
contract/abi/: StatementRegistry.json
contracts/: README.md
contracts/statement-registry/: Cargo.toml  lib.rs
public/: manifest.json
src/: App.tsx  main.tsx
src/components/: Avatar.tsx  Composer.tsx  LeftRail.tsx  MobileNav.tsx  RightRail.tsx  StatementCard.tsx  VerifiedStamp.tsx  icons.tsx
src/components/chat/: ChatList.tsx  Conversation.tsx  MessageBubble.tsx  NewChat.tsx  util.ts
src/lib/: format.ts
src/routes/: Channels.tsx  Home.tsx  Messages.tsx  Onboarding.tsx  Profile.tsx  Thread.tsx
src/sdk/: index.ts  types.ts
src/sdk/live/: cdm.ts  chat.ts  index.ts
src/sdk/mock/: chat.ts  data.ts  index.ts
src/state/: store.tsx
src/styles/: global.css
