[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["statement.dot"]
homepage = "https://statement.dot.li/"
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
# Pinned to a commit for reproducible builds (matches the Polkadot contract template).
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "90f3582a999ee843f79c56378392cfae3c05f0f3", features = ["alloc"] }
polkavm-derive = "0.31"
picoalloc = "5.2"
